Adjusting stock to separate batches